cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker_pure_monitor.cif.iec.err
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  --------------------------------------------
  (1/1) Event is only used as a monitor event.
  --------------------------------------------
   * In automaton "Mon":
     - event mon;
             ^
